deployment/k8s/namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vnidcard
  labels:
    app: vnidcard-app
    environment: production
