deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vnidcard-service
  labels:
    app: vnidcard-app
spec:
  type: LoadBalancer
  ports:
    - name: api
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: vnidcard-app
---
apiVersion: v1
kind: Service
metadata:
  name: vnidcard-nodeport
  labels:
    app: vnidcard-app
spec:
  type: NodePort
  ports:
    - name: api
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
    - name: metrics
      port: 8000
      targetPort: 8000
      nodePort: 30000
      protocol: TCP
  selector:
    app: vnidcard-app
