deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vnidcard-ingress
  labels:
    app: vnidcard-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: vnidcard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vnidcard-service
                port:
                  number: 8501
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vnidcard-service
                port:
                  number: 8080
